# Python-applied-to-geotechnical-engineering

./: General Quadratic-Hyperbolic.ipynb  pyproject.toml
Modified_Cam_Clay/: Modified_Cam_Clay.py  app.py
