[project]
name = "python-applied-to-geotechnical-engineering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.3",
    "plotly>=6.2.0",
    "pygmsh>=7.1.17",
    "scipy>=1.16.0",
    "shapely>=2.1.1",
    "streamlit>=1.47.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
]
